fix detailed card z-indexes

--- a/src/shared/ui/InstagramEmbed/ui/InstagramEmbed.module.scss
+++ b/src/shared/ui/InstagramEmbed/ui/InstagramEmbed.module.scss
@@ -19,7 +19,7 @@
     clip-path: none;
     margin-top: -20px;
     pointer-events: all;
-    z-index: 10;
+    z-index: 12;
     &::before {
       display: none;
     }
