--- a/src/widgets/Navbar/ui/Navbar.module.scss
+++ b/src/widgets/Navbar/ui/Navbar.module.scss
@@ -4,7 +4,7 @@ nav {
   top: 0;
   background-color: #fafafa;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
-  z-index: 2;
+  z-index: 20;
   padding: 0 40px;
 }
 
